# kanban-flask

./: .gitignore  LICENSE  README.md  add_sample_data.py  main.py  pyproject.toml
assets/: main.db.sql
src/: database.py  models.py  routes.py
src/routes/: __init__.py  auth.py  health.py  tasks.py  users.py
src/types/: task.py  user.py
