[project]
name = "kanban-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=23.1.0",
    "flask>=3.1.1",
    "requests>=2.32.0",
    "snowflake-id>=1.0.2",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "python-lsp-isort>=0.2.1",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.2",
]
